# legit

./: CMakeLists.txt  README.md
cmake/: FindOpenCVWindows.cmake  LegitUtilities.cmake  PlatformUtilities.cmake
src/: observers.cpp  observers.h  runner.cpp  tracker.cpp  tracker.h
src/api/: CMakeLists.txt  legit.cpp  legit.h
src/api/java/: CMakeLists.txt
src/common/: canvas.cpp  canvas.h  export.h
src/common/gui/: gui.cpp  gui.h  window.cpp  window.h
src/common/image/: histogram.cpp  histogram.h  image.cpp  image.h  integral.cpp  integral.h  sequence.cpp  sequence.h
src/common/math/: fastmath.h  geometry.cpp  geometry.h  math.h  mersenne.cpp  mersenne.h  statistics.cpp  statistics.h
src/common/platform/: CMakeLists.txt  filesystem.cpp  filesystem.h
src/common/platform/unix/: filesystem.cpp  filesystem.h
src/common/platform/windows/: filesystem.cpp  filesystem.h  getopt_win.c  getopt_win.h  math.h  stdint_win.h
src/common/utils/: buffer.h  config.cpp  config.h  debug.cpp  debug.h  defs.h  graphics.cpp  graphics.h  string.cpp  string.h  utils.cpp  utils.h
src/trackers/: CMakeLists.txt
src/trackers/basic/: CMakeLists.txt  static.cpp  static.h
src/trackers/lgt/: CMakeLists.txt  lgt.cpp  lgt.h
src/trackers/lgt/config/: lgt_tpami2013.cfg
src/trackers/lgt/modalities/: color.cpp  color.h  modalities.cpp  modalities.h  motion.cpp  motion.h  shape.cpp  shape.h
src/trackers/lgt/optimization/: crossentropy.cpp  crossentropy.h  optimization.cpp  optimization.h
src/trackers/lgt/patches/: patch.cpp  patch.h  patchset.cpp  patchset.h
src/trackers/opencv/: CMakeLists.txt  cv_onlineboosting.cpp  cv_onlineboosting.h  cv_onlinemil.cpp  cv_onlinemil.h  object_tracker.cpp  object_tracker.h  wrappers.cpp  wrappers.h
src/trackers/wrappers/: CMakeLists.txt  focus.cpp  focus.h
