CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(basic/) 

SET(BUILD_WRAPPERS TRUE CACHE BOOL "Include tracker wrappers")

IF(BUILD_WRAPPERS)
	ADD_SUBDIRECTORY(wrappers/) 
ENDIF(BUILD_WRAPPERS)

SET(BUILD_OPENCV TRUE CACHE BOOL "Include OpenCV implementations of various trackers")

IF(BUILD_OPENCV)
	ADD_SUBDIRECTORY(opencv/) 
ENDIF(BUILD_OPENCV)


SET(BUILD_TRACKER_LGT TRUE CACHE BOOL "Include the LGT tracker implementation")

IF(BUILD_TRACKER_LGT)
	ADD_SUBDIRECTORY(lgt/) 
ENDIF(BUILD_TRACKER_LGT)


LEGIT_PROPAGATE()